# ledger-lens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: logging.yaml
docs/: api_reference.md  architecture.md  deployment.md
scripts/: setup.py
src/: analysis_schema.py  auth.py  database.py  eval.py  geopolitical_service.py  graph.py  main.py  models.py  nodes.py
src/api/: dependencies.py
src/api/routes/: analysis.py  auth.py  dashboard.py  documents.py
src/config/: .env.example  settings.py
src/core/agents/: analyst.py  base.py  intelligence_hub.py  researcher.py  validator.py
src/core/services/: analysis_service.py  geopolitical_service.py
src/core/workflows/: financial_analysis.py  state.py
src/domain/entities/: document.py  user.py
src/domain/schemas/: analysis.py  auth.py  document.py  intelligence_hub.py
src/infrastructure/storage/object/: base.py  s3.py
src/infrastructure/storage/vector/: base.py  pinecone.py
src/utils/: logger.py
tests/: conftest.py
tests/api/: conftest.py  test_analysis.py  test_auth.py  test_delete.py  test_documents.py  test_progress.py  test_routes.py
tests/core/: test_agents.py
